# cdpw

./: CMakeLists.txt  Makefile  README  README.md  RELEASE_NOTES  TODO
CDPWOrthanc/: Makefile  control  preinst
Documentation/: CDW_DATA_KEY_CREATION_INSTRUCTIONS.txt  KUBUNTU_SETUP_INSTRUCTIONS.txt  QuickTestChecklist.txt  UBUNTU_SETUP_INSTRUCTIONS.txt
Installation/: 71-cdw-storage.rules  CDPW_Configure  CDW_Configure  CheckOrthancDataMount  Code_Dark_Configurator.py  GetPatientBirthdate  GetStudies  GetStudyDate  GetStudyDescription  KUBUNTU_SETUP_INSTRUCTIONS.txt  KUBUNTU_UPGRADE_INSTRUCTIONS.txt  Makefile  ReportEditor  ScanForRequiredTags  SetSystemTime  SetSystemTime.desktop  US_RUQ.py  XRAY_CHEST.py  age_in_years  cdpw_configure.service  cdw_configure.service  cdw_mounter  code_dark_configurator  code_dark_configurator.desktop  code_dark_rptgen  code_dark_study_selector  configurator.json  configure.conf  control  copyright  ct_abd_pelvis_with_contrast.py  ct_chest_without_contrast.py  dbmount.conf  network_reconfigurator  orthanc.sudo  postinst  postrm  preinst  prerm  restart_orthanc  (+2 more)
Installation/Programs/: US_RUQ.py  XRAY_CHEST.py  code_dark_rptgen.py  ct_abd_pelvis_with_contrast.py  ct_angiogram_head_and_neck_with_contrast.py  ct_chest_without_contrast.py  ct_head_without_contrast.py  mri_brain_without_contrast.py
Installation/Templates/: CT_ABDOMEN_PELVIS_WITH_CONTRAST.txt  CT_CHEST_WITHOUT_CONTRAST.txt  README  SHORTHANDS  ULTRASOUND_RIGHT_UPPER_QUADRANT_ABDOMEN.txt  US_RUQ.json  US_RUQ.odt  XRAY_CHEST.json  XRAY_CHEST.txt  ct_abd_pelvis_wc.json  ct_abd_pelvis_with_contrast.json  ct_abd_pelvis_with_contrast.odt  ct_ang_chest_abd_pelvis_wc.json  ct_ang_head_neck_wc.json  ct_angiogram_head_and_neck_with_contrast.json  ct_cervical_spine_wc_woc.json  ct_cervical_spine_woc.json  ct_chest_abd_pelvis_wc.json  ct_chest_without_contrast.json  ct_chest_without_contrast.odt  ct_chest_woc.json  ct_generic.json  ct_generic_wc.json  ct_head_without_contrast.json  ct_head_woc.json  ct_neck_wc.json  ct_pulm_angio.json  ct_pulm_angio_wc.json  dx_abd.json  dx_bl_ribs.json  dx_cervical_spine.json  dx_chest.json  dx_generic.json  dx_l_ankle.json  dx_l_shoulder.json  dx_l_wrist.json  dx_lumbar_spine.json  dx_r_ankle.json  dx_r_shoulder.json  dx_r_wrist.json  (+25 more)
Installation/xperimental/: 71-cdw-storage.rules  cdw_mounter  kp-mount-storage.service
OHIFPlugin/: .hg_archival.txt  .hgignore  BUILD  CITATION.cff  CMakeLists.txt  Makefile  NEWS  README  TODO  control  copyright  prerm
OHIFPlugin/.reuse/: dep5
OHIFPlugin/Resources/: ClearMetadataCache.py  CreateOHIFDist.sh  EmbedStaticAssets.py  SyncOrthancFolder.py
OHIFPlugin/Resources/CreateOHIFDist/: Dockerfile  build.sh
OHIFPlugin/Sources/: OrthancExplorer.js  Plugin.cpp  app-config-system.js  app-config-user.js
OldInstallation/: CDPW_Configure  Makefile  code_dark_configurator.desktop  control  dbmount.conf  orthanc_datamount_checker.service  orthanc_reconfigure  preinst
OldInstallation/config/: cdpw.json  dicom_aet_port.json
ReportPlugin/: BUILD  Makefile  README.md  control  postinst  postrm
ReportPlugin/Scripts/: GetStudyDate  code_dark_rptgen
ReportPlugin/Sources/Plugin/: OrthancExplorer.js  Plugin.cpp
ReportPlugin/Templates/: dx_abd.json  dx_generic.json  dx_l_shoulder.json  dx_l_wrist.json  mr_l_hip_woc.json  mr_mrcp_woc.json  mr_r_hip_woc.json
Resources/CMake/: NiftiCLib.cmake
Scriptage/: spawn_ol
Scripts/: code_dark_configurator  spawn_editor
Sources/Plugin/: OrthancExplorer.js  Plugin.cpp
Templates/: ct_abd_pelvis_wc.json  ct_head_woc.json  ct_pulm_angio_wc.json  mr_angio_neck_woc.json  mr_generic.json  us_extremity_veins.json.notyet  us_generic.json
cdpw/: Makefile  cdpw.json  cdpw.service  cdpw_data_present.service  code_dark_configurator  configurator.json  control  copyright  orthanc.sudo  orthanc_checker  postinst  postrm  preinst  prerm
cdpw-dicomweb/: Makefile  control
cdpw-ohif/: Makefile  control
cdpw-orthanc/: Makefile  NOTES  control  copyright  postinst
cdpw-report/: AUTHORS  Makefile  control  copyright
cdpw-report/Resources/: SyncOrthancFolder.py
cdpw-report/Scripts/: spawn_editor
cdpw-report/Sources/Plugin/: Plugin.cpp
cdpw-report/Templates/: ct_chest_woc.json  dx_r_wrist.json  us_1st_trimester_ob.json  us_left_upper_quadrant.json  us_pelvis.json
images/: README.label
kernel/: README  amdgpu_drv.c  amdgpu_drv.c.diff
misc/: GetModality  code_dark_study_tool
